--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .cabecalho {
-    background-color: #424E61;
+    background-color: #ee0b4f;
     color: white;
     display: flex;
     justify-content: space-around;
